// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckedIcon should show CheckedIcon 1`] = `
<svg
  aria-hidden="true"
  className="MuiSvgIcon-root-1"
  focusable="false"
  height="44px"
  role="presentation"
  style={
    Object {
      "height": "44px",
      "marginRight": "13px",
      "marginTop": "-10px",
      "paddingTop": "17px",
      "width": "30px",
    }
  }
  viewBox="0 0 30 44"
  width="30px"
>
  <title>
    item
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    id="Page-1"
    stroke="none"
    strokeWidth="1"
  >
    <g
      id="Group"
    >
      <g
        id="list-count/checked"
      >
        <g>
          <rect
            fill="#3B4B59"
            height="27"
            id="Base"
            rx="13.5"
            stroke="#495B70"
            width="29"
            x="0.5"
            y="0.5"
          />
          <path
            d="M14.1607102,15.6128249 L18.7094828,11.0640523 C19.0983027,10.6752324 19.7273633,10.6738915 20.1206102,11.0671384 C20.5111345,11.4576627 20.5170209,12.0849413 20.1236963,12.4782659 L14.713208,17.8887542 C14.3243881,18.2775741 13.6953275,18.2789151 13.3020806,17.8856681 C13.2083814,17.7919689 13.1368248,17.6846405 13.087612,17.5701843 L11.1048627,15.5874349 C10.7144135,15.1969858 10.7192331,14.5591232 11.1022757,14.1760806 L11.2087372,14.0696191 C11.5977575,13.6805988 12.2268759,13.6789905 12.6200915,14.0722061 L14.1607102,15.6128249 Z"
            fill="#93B0C1"
            id="InsideTick"
          />
        </g>
      </g>
      <polygon
        fill="#364357"
        id="Line"
        opacity="0.800000012"
        points="15 28 16 28 16 44 15 44"
      />
    </g>
  </g>
</svg>
`;

exports[`CheckedIcon unverified should show CheckedIcon unverified 1`] = `
<svg
  aria-hidden="true"
  className="MuiSvgIcon-root-1"
  focusable="false"
  height="44px"
  role="presentation"
  style={
    Object {
      "height": "44px",
      "marginRight": "13px",
      "marginTop": "-10px",
      "paddingTop": "17px",
      "width": "30px",
    }
  }
  viewBox="0 0 30 44"
  width="30px"
>
  <title>
    item
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    id="Page-1"
    stroke="none"
    strokeWidth="1"
  >
    <g
      id="Group"
    >
      <g
        id="list-count/checked"
      >
        <g>
          <rect
            fill="#3B4B59"
            height="27"
            id="Base"
            rx="13.5"
            stroke="#495B70"
            width="29"
            x="0.5"
            y="0.5"
          />
          <path
            d="M14.1607102,15.6128249 L18.7094828,11.0640523 C19.0983027,10.6752324 19.7273633,10.6738915 20.1206102,11.0671384 C20.5111345,11.4576627 20.5170209,12.0849413 20.1236963,12.4782659 L14.713208,17.8887542 C14.3243881,18.2775741 13.6953275,18.2789151 13.3020806,17.8856681 C13.2083814,17.7919689 13.1368248,17.6846405 13.087612,17.5701843 L11.1048627,15.5874349 C10.7144135,15.1969858 10.7192331,14.5591232 11.1022757,14.1760806 L11.2087372,14.0696191 C11.5977575,13.6805988 12.2268759,13.6789905 12.6200915,14.0722061 L14.1607102,15.6128249 Z"
            fill="#93B0C1"
            id="InsideTick"
          />
        </g>
      </g>
      <polygon
        fill="#364357"
        id="Line"
        opacity="0.800000012"
        points="15 28 16 28 16 44 15 44"
      />
    </g>
  </g>
</svg>
`;

exports[`CheckedIcon verified should show CheckedIcon verified 1`] = `
<svg
  aria-hidden="true"
  className="MuiSvgIcon-root-1"
  focusable="false"
  height="44px"
  role="presentation"
  style={
    Object {
      "height": "44px",
      "marginRight": "13px",
      "marginTop": "-10px",
      "paddingTop": "17px",
      "width": "30px",
    }
  }
  viewBox="0 0 30 44"
  width="30px"
>
  <title>
    item
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    id="Page-1"
    stroke="none"
    strokeWidth="1"
  >
    <g
      id="Group"
    >
      <g
        id="list-count/checked"
      >
        <g>
          <rect
            fill="#3B4B59"
            height="27"
            id="Base"
            rx="13.5"
            stroke="#495B70"
            width="29"
            x="0.5"
            y="0.5"
          />
          <path
            d="M14.1607102,15.6128249 L18.7094828,11.0640523 C19.0983027,10.6752324 19.7273633,10.6738915 20.1206102,11.0671384 C20.5111345,11.4576627 20.5170209,12.0849413 20.1236963,12.4782659 L14.713208,17.8887542 C14.3243881,18.2775741 13.6953275,18.2789151 13.3020806,17.8856681 C13.2083814,17.7919689 13.1368248,17.6846405 13.087612,17.5701843 L11.1048627,15.5874349 C10.7144135,15.1969858 10.7192331,14.5591232 11.1022757,14.1760806 L11.2087372,14.0696191 C11.5977575,13.6805988 12.2268759,13.6789905 12.6200915,14.0722061 L14.1607102,15.6128249 Z"
            fill="#1CBA7D"
            id="InsideTick"
          />
        </g>
      </g>
      <polygon
        fill="#364357"
        id="Line"
        opacity="0.800000012"
        points="15 28 16 28 16 44 15 44"
      />
    </g>
  </g>
</svg>
`;

exports[`Default Bullet should show Default Bullet icon 1`] = `
<svg
  aria-hidden="true"
  className="MuiSvgIcon-root-1"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": "8px",
      "marginRight": "13px",
      "width": "8px",
    }
  }
  viewBox="0 0 8 8"
>
  <title>
    Oval
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    id="oval"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fillRule="nonzero"
      stroke="#FFFFFF"
      transform="translate(-1089.000000, -198.000000)"
    >
      <g
        id="Lists"
        transform="translate(1066.000000, 104.000000)"
      >
        <g
          id="List"
          transform="translate(24.000000, 82.000000)"
        >
          <circle
            cx="3"
            cy="16"
            id="Oval"
            r="3"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`DeniedTick should show DeniedTick icon 1`] = `
<svg
  aria-hidden="true"
  className="MuiSvgIcon-root-1"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": "16px",
      "marginRight": "13px",
      "width": "16px",
    }
  }
  viewBox="0 0 16 16"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      id="5.-Style-Guide---UI-Elements"
      transform="translate(-647.000000, -657.000000)"
    >
      <g
        id="Accordion"
        transform="translate(39.000000, 322.000000)"
      >
        <g
          id="Content"
          transform="translate(0.000000, 51.000000)"
        >
          <g
            id="Collapse-box-3"
            transform="translate(0.000000, 263.000000)"
          >
            <g
              id="Area-Header'"
              transform="translate(19.000000, 14.000000)"
            >
              <g
                id="Status"
                transform="translate(589.000000, 4.000000)"
              >
                <g
                  id="icon-denied"
                  transform="translate(0.000000, 3.000000)"
                >
                  <rect
                    fill="#FE4B61"
                    height="16"
                    id="Base"
                    rx="4"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <g
                    id="Group-9"
                    transform="translate(4.444444, 4.444444)"
                  >
                    <path
                      d="M7.11111111,0 L0,7.11111111"
                      fill="#000000"
                      fillOpacity="0"
                      id="Fill-1"
                    />
                    <path
                      d="M7.11111111,0 L0,7.11111111"
                      id="Stroke-3"
                      stroke="#FFFFFF"
                      strokeLinecap="square"
                      strokeWidth="2"
                    />
                    <path
                      d="M7.11111111,7.11111111 L0,0"
                      fill="#000000"
                      fillOpacity="0"
                      id="Fill-4"
                    />
                    <path
                      d="M7.11111111,7.11111111 L0,0"
                      id="Stroke-5"
                      stroke="#FFFFFF"
                      strokeLinecap="square"
                      strokeWidth="2"
                    />
                  </g>
                </g>
              </g>
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`GreenTick should show GreenTick icon 1`] = `
<svg
  aria-hidden="true"
  className="MuiSvgIcon-root-1"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": "16px",
      "marginRight": "13px",
      "width": "16px",
    }
  }
  viewBox="0 0 16 16"
>
  <title>
    icon-attr-check
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    id="-ID-Dashboard"
    stroke="none"
    strokeWidth="1"
  >
    <g
      id="403---Identity-Summary"
      transform="translate(-321.000000, -347.000000)"
    >
      <g
        id="Area-box-1"
        transform="translate(150.000000, 264.000000)"
      >
        <g
          id="Content"
          transform="translate(15.000000, 81.000000)"
        >
          <g
            id="DL1"
          >
            <g
              id="DD"
              transform="translate(156.000000, 0.000000)"
            >
              <g
                id="icon-attr-check"
                transform="translate(0.000000, 2.000000)"
              >
                <rect
                  fill="#1BB934"
                  height="15"
                  id="Base"
                  rx="4"
                  stroke="#22C73C"
                  width="15"
                  x="0.5"
                  y="0.5"
                />
                <path
                  d="M12.7232,4.70478222 C12.3756444,4.35722667 11.8129778,4.35722667 11.4663111,4.70478222 L6.69831111,9.47278222 L5.07253333,7.84789333 C4.72586667,7.50033778 4.1632,7.50033778 3.81564444,7.84789333 C3.46897778,8.19456 3.46897778,8.75722667 3.81564444,9.10478222 L6.06986667,11.3581156 C6.41653333,11.7056711 6.9792,11.7056711 7.32675556,11.3581156 L12.7232,5.96167111 C13.0707556,5.61500444 13.0707556,5.05233778 12.7232,4.70478222"
                  fill="#FFFFFF"
                  id="Tick"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`HourGlassIcon should show HourGlassIcon icon 1`] = `
<svg
  aria-hidden="true"
  className="MuiSvgIcon-root-1"
  focusable="false"
  role="presentation"
  style={
    Object {
      "height": "16px",
      "marginRight": "13px",
      "width": "16px",
    }
  }
  viewBox="0 0 16 16"
>
  <g
    fill="none"
    fillRule="evenodd"
    stroke="none"
    strokeWidth="1"
  >
    <g
      fill="#697C95"
      fillRule="nonzero"
      id="5.-Style-Guide---UI-Elements"
      transform="translate(-643.000000, -394.000000)"
    >
      <g
        id="Accordion"
        transform="translate(39.000000, 322.000000)"
      >
        <g
          id="Content"
          transform="translate(0.000000, 51.000000)"
        >
          <g
            id="Collapse-box-1"
          >
            <g
              id="Area-Header'"
              transform="translate(0.000000, 14.000000)"
            >
              <g
                id="Status"
                transform="translate(604.000000, 4.000000)"
              >
                <path
                  d="M11.25,3 L0.75,3 C0.33578125,3 0,3.33578125 0,3.75 L0,4.25 C0,4.66421875 0.33578125,5 0.75,5 C0.75,7.84265625 2.34425,10.2416875 4.5263125,11 C2.34425,11.7583125 0.75,14.1573438 0.75,17 C0.33578125,17 0,17.3357813 0,17.75 L0,18.25 C0,18.6642187 0.33578125,19 0.75,19 L11.25,19 C11.6642187,19 12,18.6642187 12,18.25 L12,17.75 C12,17.3357813 11.6642187,17 11.25,17 C11.25,14.1573437 9.65575,11.7583125 7.4736875,11 C9.65575,10.2416875 11.25,7.84265625 11.25,5 C11.6642187,5 12,4.66421875 12,4.25 L12,3.75 C12,3.33578125 11.6642187,3 11.25,3 Z M8.9038125,15 L3.09625,15 C3.62934375,13.5375937 4.72425,12.5 6,12.5 C7.27565625,12.5 8.3706875,13.537375 8.9038125,15 Z M8.90440625,7 L3.0961875,7 C2.874625,6.392125 2.75,5.710875 2.75,5 L9.25,5 C9.25,5.71265625 9.12540625,6.39334375 8.90440625,7 Z"
                  id="icon-hourglass"
                />
              </g>
            </g>
          </g>
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Line should show Line 1`] = `
<span
  style={
    Object {
      "backgroundColor": "#364357",
      "height": "16px",
      "width": "2px",
    }
  }
/>
`;

exports[`StepIcon should show StepIcon icon 1`] = `
<svg
  aria-hidden="true"
  className="MuiSvgIcon-root-1"
  focusable="false"
  height="44px"
  role="presentation"
  style={
    Object {
      "height": "44px",
      "marginRight": "13px",
      "marginTop": "-10px",
      "paddingTop": "17px",
      "width": "30px",
    }
  }
  viewBox="0 0 30 44"
  width="30px"
>
  <title>
    item
  </title>
  <g
    fill="none"
    fillRule="evenodd"
    id="empty1"
    stroke="none"
    strokeWidth="1"
  >
    <g
      id="group"
    >
      <g
        id="empty"
      >
        <rect
          fill="#F5A623"
          height="27"
          id="base"
          rx="13.5"
          stroke="#F5A623"
          width="29"
          x="0.5"
          y="0.5"
        />
        <text
          fill="white"
          style={
            Object {
              "color": "white",
              "fontSize": "14px",
              "fontWeight": 600,
            }
          }
          x="11"
          y="19"
        />
      </g>
      <polygon
        fill="#364357"
        id="Line2"
        opacity="0.800000012"
        points="15 28 16 28 16 44 15 44"
      />
    </g>
  </g>
</svg>
`;
